--- a/css/main.css
+++ b/css/main.css
@@ -251,7 +251,7 @@ body {
   width: 50%;
   height: 30px;
   margin-top: 25px;
-  margin-left: 85px;
+  margin-left: 84px;
   width: 240px;
 
 
@@ -264,7 +264,7 @@ body {
   width: 100%;
   background-color: #dfe6e9;
   padding: 10px;
-  height: 220px;
+  height: 225px;
   text-align: center;
   /* font-family: "Great Vibes", cursive; */
   font-size: 100px;
@@ -281,4 +281,10 @@ body {
     font-size: 20px;
   }
   
+}
+.groom{
+  margin-top: 10px;
+  margin-bottom: -0.5rem;
+  margin-bottom: -1.5rem;
+  margin-top: 11px;
 }
