--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ body {
           font-size: 50px; } }
 .ww-couple-name{
   margin-bottom: 20rem;
+  margin-top: 20px;
 }
 .ww-home-page:before {
   content: "";
