--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ body {
       max-width: 600px;
       text-align: center;
       margin-left: 0;
-      z-index: 999; }
+      z-index: 999; 
+      margin-bottom: 35px}
     .ww-home-page .ww-wedding-announcement img {
       max-height: 350px;
       width: auto; }
